Bug 339957 - Battery monitor - incorrect time remaining in tooltip.
Summary: Battery monitor - incorrect time remaining in tooltip.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Power and Battery widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-14 13:21 UTC by perrantrevan
Modified: 2014-12-10 17:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description perrantrevan 2014-10-14 13:21:29 UTC
In the battery monitor tooltip the time remaining is  never updated as the battery is depleted (the % of charge remaining is updated however)

Reproducible: Always

Steps to Reproduce:
1. Unplug laptop power cable
2. Move cursor over battery monitor tooltip.
3. The time remaining is shown along with percentage of charge remaining.
4. Repeat steps 2 and 3. Observe time remaining.

Actual Results:  
The charge remaining is updated if you move the mouse over the battery monitor. However, the time remaining stays the same.

Expected Results:  
The time remaining should be updated as the battery depletes.
Comment 1 Kai Uwe Broulik 2014-10-14 13:26:38 UTC
*** Bug 339958 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2014-10-14 13:27:56 UTC
I cannot reproduce this issue running master. Both the batterymonitor tooltip (hovering the tray icon) as well as the tooltip of an individual battery is updated properly.

Can you repeatedly check the output of upower -d whether the time updates there? If it does not, this is likely a driver/acpi issue.
Comment 3 perrantrevan 2014-10-14 13:41:24 UTC
Hi, the times are completely different.

Battery monitor tooltip = 1:49:20

1st upower -d = 4.8 hours
2nd upower -d = 2.4 hours
3rd upowerd -d = 2.8 hours
4th upowerd -d = 4.8 hours

P
Comment 4 Aleix Pol 2014-11-24 16:26:43 UTC
So what happens with this? is it an upstream bug? Kai?
Comment 5 Kai Uwe Broulik 2014-12-04 08:44:46 UTC
https://git.reviewboard.kde.org/r/121343/
Comment 6 Weng Xuetian 2014-12-05 16:05:17 UTC
Git commit 23ad576c3fdbd1498b88907f6c9ee0cd693fa834 by Weng Xuetian.
Committed on 05/12/2014 at 15:56.
Pushed by xuetianweng into branch 'Plasma/5.1'.

Fix battery remaining time update with upower >= 0.99

Existing device is not connected to PropertiesChanged signal, so it
never recevies update.

REVIEW: 121343
FIXED-IN: 5.1.2

M  +6    -4    daemon/backends/upower/powerdevilupowerbackend.cpp
M  +1    -0    daemon/backends/upower/powerdevilupowerbackend.h

http://commits.kde.org/powerdevil/23ad576c3fdbd1498b88907f6c9ee0cd693fa834
Comment 7 Weng Xuetian 2014-12-05 16:05:31 UTC
Git commit b20ee2bd244db2620e84e4b71e77675036cb15bd by Weng Xuetian.
Committed on 05/12/2014 at 15:56.
Pushed by xuetianweng into branch 'master'.

Fix battery remaining time update with upower >= 0.99

Existing device is not connected to PropertiesChanged signal, so it
never recevies update.

REVIEW: 121343
FIXED-IN: 5.1.2

M  +6    -4    daemon/backends/upower/powerdevilupowerbackend.cpp
M  +1    -0    daemon/backends/upower/powerdevilupowerbackend.h

http://commits.kde.org/powerdevil/b20ee2bd244db2620e84e4b71e77675036cb15bd
Comment 8 Hrvoje Senjan 2014-12-10 17:38:12 UTC
@Weng, i'm guessing this could/should be backported to kde-workspace also?