Fix battery remaining time update with upower >= 0.99

Existing device is not connected to PropertiesChanged signal, so it
never recevies update.

REVIEW: 121343
BUG: 339957
FIXED-IN: 5.1.2